feat: implement auto-incrementing version system in build script
✅ Version System Implementation Complete

Features Added:
- Auto-incrementing patch version on each build
- Version display during build process
- Integration with existing version.properties system
- Updated build.gradle to use auto-incrementing functions

Version Management:
- Patch version auto-increments on each build
- Major.Minor versions manually controlled
- Build code auto-increments via Gradle
- Current version: 2.0.1-build.26 (after this build)

Build Script Enhancements:
- Shows version info: 📱 Version: 2.0.1-build.25
- Maintains backward compatibility
- Creates version.properties if missing
- Clean error handling for version updates

Ready for device installation and continued development

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,8 @@ android {
         applicationId "com.customcamera.app"
         minSdk 24
         targetSdk 34
-        versionCode 30
-        versionName "2.0.0-professional"
+        versionCode getVersionCode()
+        versionName getVersionName()
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
